<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guideLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spyro_background_s"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/guide_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imagen_dragon"
        android:src="@drawable/spyro" />

    <TextView
        android:id="@+id/guide_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/guide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="175dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/guideText"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/start_guide_button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="50dp"
        android:background="@drawable/gems1"
        android:contentDescription="@string/button_image"
        android:text="@string/start"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/skip_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="16dp"
        android:text="@string/skip_guide"
        android:textColor="@color/white"
        android:textSize="16sp" />


</FrameLayout>