<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guide_step"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/bubble_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bubble_background"
            android:elevation="20dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/guide_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/guide_previus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:text="@string/previus"
                    android:textColor="@color/purple" />

                <Button
                    android:id="@+id/guide_next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:text="@string/next"
                    android:textColor="@color/purple" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/skip_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/skip_guide"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>
